# Klasifikasi_Mineral

./: README.md  app.py  config.py  pyproject.toml  requirements.txt  test_inference.py
.github/workflows/: deploy-huggingface.yml
configs/: app.yaml
mineral_klasifikasi_ml_standard/: README.md  requirements.txt
src/mineral_classifier/: inference.py  ui.py
