[project]
name = "mineral-klasifikasi"
version = "0.1.0"
description = "Streamlit app for mineral image classification using Ultralytics YOLO classification models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit==1.41.1",
  "pillow==11.1.0",
  "numpy==2.1.3",
  "plotly==5.24.1",
  "ultralytics==8.3.58",
  "pyyaml==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
